--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore.DB;Integrated Security=True"
+    "DefaultConnection": "Data Source=OLDI-PC;Initial Catalog=WebStore.WebApi.DB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
