--- a/WebStore/bundleconfig.json
+++ b/WebStore/bundleconfig.json
@@ -2,10 +2,11 @@
   {
     "outputFileName": "wwwroot/css/site.css",
     "inputFiles": [
+      "wwwroot/css/main.css",
       //"wwwroot/css/animate.css",
       //"wwwroot/css/responsive.css",
-      "wwwroot/css/price-range.css",
-      "wwwroot/css/main.css"
+      "wwwroot/css/price-range.css"
+
     ]
   },
   {
