change string CustomGreetings on appsettings

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -10,5 +10,5 @@
     }
   },
   "AllowedHosts": "*",
-  "CustomGreetings": "First ASP.NET Core App"
+  "CustomGreetings": "Web-API ASP.NET Core App"
 }
