Basic client for WebAPI

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -10,5 +10,6 @@
     }
   },
   "AllowedHosts": "*",
-  "CustomGreetings": "Web-API ASP.NET Core App"
+  "CustomGreetings": "Web-API ASP.NET Core App",
+  "WebApiURL": "http:/localhost:5001" 
 }
