Created the first test Web API and a test client for requests to this Web API

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -11,5 +11,5 @@
   },
   "AllowedHosts": "*",
   "CustomGreetings": "Web-API ASP.NET Core App",
-  "WebApiURL": "http:/localhost:5001" 
+  "WebApiURL": "http://localhost:5001" 
 }
