added connection string for DB on service hosting

--- a/Services/WebStore.ServiceHosting/appsettings.json
+++ b/Services/WebStore.ServiceHosting/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=OLDI-PC;Initial Catalog=WebStore.WebApi.DB;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
