--- a/Services/WebStore.Clients/WebStore.Clients.csproj
+++ b/Services/WebStore.Clients/WebStore.Clients.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\WebStore.Interfaces\WebStore.Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Products\" />
+  </ItemGroup>
+
 </Project>
