Removing links to a database from WebStore +"WebApiURL": "http://localhost:53941"

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=OLDI-PC;Initial Catalog=WebStore.WebApi.DB;Integrated Security=True"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Data Source=OLDI-PC;Initial Catalog=WebStore.WebApi.DB;Integrated Security=True"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,5 +11,6 @@
   },
   "AllowedHosts": "*",
   "CustomGreetings": "Web-API ASP.NET Core App",
-  "WebApiURL": "http://localhost:5001" 
+  //"WebApiURL": "http://localhost:5001" 
+  "WebApiURL": "http://localhost:53941"
 }
