--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,5 @@ healthchecksdb
 /WebStore/wwwroot/js/site.js
 /WebStore/wwwroot/css/site.min.css
 /WebStore/wwwroot/css/site.css
+/Common/WebStore.Domain/WebStore.Domain.xml
+/Services/WebStore.ServiceHosting/WebStore.ServiceHosting.xml
