Logging subsystem configuration in the AppSettings.json file

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -2,11 +2,19 @@
   //"ConnectionStrings": {
   //  "DefaultConnection": "Data Source=OLDI-PC;Initial Catalog=WebStore.WebApi.DB;Integrated Security=True"
   //},
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Information",
+        "Microsoft.AspNetCore.Identity": "Debug"
+      }
     }
   },
   "AllowedHosts": "*",
