--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -10,6 +10,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     },
     "Console": {
+      "IncludeScopes": true,
       "LogLevel": {
         "Default": "Information",
         "Microsoft": "Information",
