Refinement of the product catalog filter for paginated splitting

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -77,6 +77,7 @@
   },
   "AllowedHosts": "*",
   "CustomGreetings": "Web-API ASP.NET Core App",
+  "PageSize": 3,
   //"WebApiURL": "http://localhost:5001" 
   "WebApiURL": "http://localhost:53941"
 }
